etc/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hotelier
---
apiVersion: v1
kind: Namespace
metadata:
  name: databases
---
apiVersion: v1
kind: Namespace
metadata:
  name: observability
