etc/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hotelier-ingress
  namespace: hotelier
spec:
  ingressClassName: nginx
  rules:
    - host: api.hotelier.local
      http:
        paths:
          - path: /identity
            pathType: Prefix
            backend:
              service:
                name: identity-service
                port:
                  number: 80
          - path: /accommodation
            pathType: Prefix
            backend:
              service:
                name: accommodation-service
                port:
                  number: 80
          - path: /availability
            pathType: Prefix
            backend:
              service:
                name: availability-service
                port:
                  number: 80
          - path: /notification
            pathType: Prefix
            backend:
              service:
                name: notification-service
                port:
                  number: 80
          - path: /rating
            pathType: Prefix
            backend:
              service:
                name: rating-service
                port:
                  number: 80
          - path: /reservation
            pathType: Prefix
            backend:
              service:
                name: reservation-service
                port:
                  number: 80
          - path: /search
            pathType: Prefix
            backend:
              service:
                name: search-service
                port:
                  number: 80
          - path: /cdn
            pathType: Prefix
            backend:
              service:
                name: cdn-service
                port:
                  number: 80
